# ai-router-sdk

./: README.md  conftest.py  pyproject.toml  pytest.ini
airouter/: completions.py  router.py  types.py
src/: api.py  chat.py  completions.py  config.py  enum.py  errors.py  router.py  types.py
tests/: test_api.py  test_config.py  test_enum.py  test_router.py
